
  * Port keyboard indicator from xklavier to Xkl and from gconf to gsettings.
    Update the test accordingly. (LP: #950087, LP: #800561)
  * Add bin/ubiquity-bluetooth-agent, a bluetooth agent allowing any HID
    bluetooth device for 5 minutes, then spawning bluetooth-applet if
    available, otherwise simply dies.
  * Start bluetooth-applet from ubiquity-dm (LP: #644198)

 -- Stéphane Graber <stgraber@ubuntu.com>  Fri, 09 Mar 2012 11:28:28 -0500

ubiquity (2.9.26) precise; urgency=low

  * Build-depend on ubuntu-artwork for the unit test. (LP: #950125)

 -- Stéphane Graber <stgraber@ubuntu.com>  Thu, 08 Mar 2012 14:22:20 -0500

ubiquity (2.9.25) precise; urgency=low

  [ Colin Watson ]
  * Fix debug message when failing to create the migration-assistant page.
  * Ensure that the migration-assistant page is shown in
    test_pages_fit_on_a_netbook.
  * Make the migration-assistant tree view expand again (LP: #946123).

  [ Stéphane Graber ]
  * gtk_ui: Set virtual terminal font to "Ubuntu Mono 8" so in most cases
    two lines of text can now be displayed. (LP: #830946)
  * Change ubiquity/text/webcam_heading to be generic (LP: #926493)
  * Switch from xklavier to Xkl using gobject introspection.
    The code is still disabled though because of bug #950087.
  * Automatic update of included source packages: flash-kernel
    2.28ubuntu41, netcfg 1.68ubuntu13, partman-base 153ubuntu2, partman-
    target 76ubuntu2, preseed 1.50ubuntu1, tzsetup 1:0.26ubuntu11.

 -- Stéphane Graber <stgraber@ubuntu.com>  Thu, 08 Mar 2012 12:32:02 -0500

ubiquity (2.9.24) precise; urgency=low

  * webcam:
    - image-capture-encoder is deprecated, just drop it for now
    - gst_caps_new_simple needs to use a supported width/height,
      going with 640x480 as it seems standard for most webcams.
      (LP: #942030)
  * ubi-console-setup: On automatic install, don't wait 600ms or
    dbfilter will be None by the time the timer reaches 0 (LP: #944614)